--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML><html lang="ja"><head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
-<title>相良有紀　SAGARA Yuki</title>
+<title>Raddiant me～はなまるの輪～</title>
 <link rel="stylesheet" type="text/css" href="https://yuki1996.com/hp/style.css"> 
 <link rel="icon" href="https://yuki1996.com/hp/favicon.ico" href="favicon.ico">
 <meta property="og:type" content="article" />
